Add placeholder text to template input field

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div>
       <h2>Template</h2>
-      <textarea id="templateInput" rows="4" cols="50"></textarea>
+      <textarea id="templateInput" rows="4" cols="50" placeholder="Try something like: Hello {{name}}, welcome to {{destination}}!"></textarea>
       <button type="button" onclick="applyAndSaveTemplate()">
         Apply Template
       </button>
